UWEC-326: apply clearfix to top level menu items to correct spacing

--- a/web/themes/custom/citizen_dart/components/02-chunks/navigation/footer-menus/_footer-menus.scss
+++ b/web/themes/custom/citizen_dart/components/02-chunks/navigation/footer-menus/_footer-menus.scss
@@ -105,6 +105,7 @@
 	.audience-menu{
     break-after: column;
     li:not(:last-child){
+      @include clearFix;
       margin-bottom: 18px;
     }
 		a {
@@ -119,6 +120,7 @@
     margin-top: $spaceLg;
 		ul:not(.contextual-links){
       li {
+        @include clearFix;
         margin-bottom: 18px;
       }
 			a {
